# wlan-cloud-analytics

./: .gitignore  BUILDING.md  CMakeLists.txt  CONFIGURATION.md  Dockerfile  LICENSE  README.md  docker-entrypoint.sh  owanalytics.properties  owanalytics.properties.tmpl  owanalytics.service  readiness_check  set_env.sh  wait-for-postgres.sh
.github/workflows/: ci.yml  cleanup.yml  openapi-pages.yml  release.yml
docs/: index.html
helm/: Chart.yaml  README.md  values.yaml
helm/templates/: _config.tpl  _helpers.tpl  deployment.yaml  ingress.yaml  pvc.yaml  secret-certs.yaml  secret-config.yaml  secret-env.yaml  secret-regcred.yaml  service.yaml
openapi/: owanalytics.yaml
src/: APStats.cpp  APStats.h  Daemon.cpp  Daemon.h  Dashboard.cpp  Dashboard.h  DeviceStatusReceiver.cpp  DeviceStatusReceiver.h  HealthReceiver.cpp  HealthReceiver.h  StatFunc.h  StateReceiver.cpp  StateReceiver.h  StorageService.cpp  StorageService.h  VenueCoordinator.cpp  VenueCoordinator.h  VenueWatcher.cpp  VenueWatcher.h  WifiClientCache.cpp  WifiClientCache.h  dict_bssid.h  dict_ssid.h  dict_ue.h  last_stats_2.json
src/RESTAPI/: RESTAPI_analytics_db_helpers.h  RESTAPI_board_devices_handler.cpp  RESTAPI_board_devices_handler.h  RESTAPI_board_handler.cpp  RESTAPI_board_handler.h  RESTAPI_board_list_handler.cpp  RESTAPI_board_list_handler.h  RESTAPI_board_timepoint_handler.cpp  RESTAPI_board_timepoint_handler.h  RESTAPI_routers.cpp  RESTAPI_wificlienthistory_handler.cpp  RESTAPI_wificlienthistory_handler.h
src/RESTObjects/: RESTAPI_AnalyticsObjects.cpp  RESTAPI_AnalyticsObjects.h  RESTAPI_FMSObjects.cpp  RESTAPI_ProvObjects.cpp  RESTAPI_SecurityObjects.cpp
src/framework/: MicroService.h  orm.h  ow_constants.h
src/sdks/: SDK_prov.cpp  SDK_prov.h
src/storage/: storage_boards.cpp  storage_boards.h  storage_timepoints.cpp  storage_timepoints.h  storage_wificlients.cpp  storage_wificlients.h
stats_sample/: bridge-stats-show-clients.json  bridge2_config.json  bridge2_stats.json  bridge_stats.json  last_stats.json  nat_stats.json
test_scripts/curl/: cli  result.json
